   - from_code_unit_list_allow_ill_formed/2
   - to_utf8_code_unit_list/2
   - to_utf16_code_unit_list/2
   - from_utf8_code_unit_list/2
   - from_utf16_code_unit_list/2
   - det_remove_prefix/3
   - compare_ignore_case_ascii/3
   - to_rev_char_list/2
   - compare_substrings/6
   - unsafe_compare_substrings/6
   - nondet_append/3
   - append_string_pieces/2
   - unsafe_append_string_pieces/2

  The following procedures in the string module have been deprecated:

   - to_char_list(uo, in)
   - to_rev_char_list(uo, in)
   - from_char_list(out, in)
   - append(out, out, in)
   - prefix(in, out)
   - suffix(in, out)

  The following obsolete predicates and functions have been removed from the
  string module:

   - substring/3
   - substring/4
   - unsafe_substring/3
   - unsafe_substring/4
   - foldl_substring/5
   - foldl_substring/6
   - foldl2_substring/8
   - foldl2_substring/8
   - foldr_substring/5
   - foldr_substring/6

* The following predicates have been added to the map module:

   - foldl5/12
   - foldr5/12
   - map_foldl4/11
   - intersect_list/4
   - union_list/4
   - select_unselect/4
   - select_unselect_sorted_list/4

* The following predicates have been added to the tree234 module:

   - map_foldl4/11

* The following predicates and/or functions have been added to the set modules:

   - intersection_and_differences
   - det_remove
   - det_remove_list
   - rev_sorted_list_to_set

   while the following predicates and/or functions have been marked as obsolete:

   - empty
   - non_empty
   - set

* We have a added a new type, maybe_errors, to the maybe module.

  The following predicate and function have been added to the maybe module:

   - fold2_maybe/6
   - maybe_default/2
   - pred_to_maybe/1
   - func_to_maybe/1

* The following predicates and functions have been added to the calendar
  module:

   - int_to_month/2
   - det_int_to_month/1
   - int0_to_month/2
   - det_int0_to_month/1
   - month_to_int/1
   - month_to_int0/1
   - same_date/1
